# value-averaging-backtester

./: .gitignore  CMakeLists.txt  README.md  flake.nix  prd.md  progress.md
.github/workflows/: ci.yml
config/: optimization_30s.json  rolling_optimization_30s.json  smoke_monte_carlo.json  smoke_optimization.json  smoke_policy_switches.json  smoke_rolling_optimization.json  smoke_simulation.json
docs/: architecture.md  bayesian_optimization.md  nix.md  price_file_schema.md  requirements.md  source_google_doc_raw.txt
include/cpp_backtester/: config.hpp  io.hpp  monte_carlo.hpp  optimizer.hpp  price_generator.hpp  price_loader.hpp  rolling_optimizer.hpp  simulator.hpp  types.hpp
scripts/: download_yahoo.py  generate_synthetic_close_series.py  test-in-nix.sh
src/: config.cpp  io.cpp  main.cpp  monte_carlo.cpp  optimizer.cpp  price_generator.cpp  price_loader.cpp  rolling_optimizer.cpp  simulator.cpp
tests/: README.md  test_smoke.py
tests/fixtures/: close_only_alpha.csv  close_only_beta.csv  dated_alpha.csv  dated_beta.csv
